build(dev-environment): :adhesive_bandage: remove PYTHONPATH env var
It is already set by qgis from conda-forge and everything works out of the box

--- a/environment.dev.yml
+++ b/environment.dev.yml
@@ -3,6 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  # Jupyter Notebook helps tremendously with quickly testing functionality
+  - ipykernel
   - python=3.12.3
   - pip=24.0.*
   - qgis=3.34.4 # LTR version
@@ -10,5 +12,4 @@ dependencies:
       - build==1.2.1
       - qgis-stubs==0.2.0.post1
 variables:
-  PYTHONPATH: ${CONDA_PREFIX}/share/qgis/python
   QT_QPA_PLATFORM: xcb # Make sure to run QGIS with X11 instead of Wayland
